# agentic-ai-playbook

./: .env.sample  README.md  pyproject.toml
guardrails/: guardrails.py
notebook/: call_llm.ipynb  product_query_agent_with_memory.ipynb
shopping_agent/agent/: shopping_agent.py
shopping_agent/db/: queries.py  retail_store.db  setup_db.py
shopping_agent/notebook/: product_query_agent.ipynb
shopping_agent/tools/: create_order_tool.py  langchain_tools.py  order_tools.py  product_details_tools.py  product_rating_tool.py  product_search_tools.py
